# GameBoy

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: emu.h  gui.h  imgui_memory_editor.h  macros.h  mmu.h  opcodes.h  utility.h
src/: emu.cpp  gui.cpp  main.cpp  mmu.cpp  opcode_test.cpp  opcodes.cpp
tests/opcodes/: 2a.json  f1.json
